Bug 83764 - EDITING: Calc crashes on sort by column. Fatal Error: Block position not found!
Summary: EDITING: Calc crashes on sort by column. Fatal Error: Block position not found!
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.2.6.2 release
Hardware: x86-64 (AMD64) All
: high major
Assignee: Kohei Yoshida
URL:
Whiteboard: target:4.4.0 target:4.2.7 target:4.3.3
Keywords: regression
: 84753 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-09-11 12:27 UTC by Doriano Cometto
Modified: 2015-02-12 20:52 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Calc document to reproduce this bug in Calc 4.3.0.4 (56.02 KB, application/vnd.oasis.opendocument.spreadsheet)
2014-09-11 12:27 UTC, Doriano Cometto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Doriano Cometto 2014-09-11 12:27:29 UTC
Created attachment 106128 [details]
Calc document to reproduce this bug in Calc 4.3.0.4

Steps to reproduce:

1) Open the attached calc document in Calc.
2) Select columns from F to AT (the whole columns, dragging the mouse on the colum header)
3) Open the "Sort" dialog with Data--> Sort...
4) In the "Option" tab check "Left to right (sort columns)
5) In the "Sort criteria" tab set:
   - Sort key 1: Row 7 Descending
   - Sort key 2: Row 8 Ascending
6) Press OK.

The error message dialog "Fatal Error: Block position not found!" displays.
Comment 1 raal 2014-09-11 17:39:41 UTC
I can confirm crash in Version: 4.4.0.0.alpha0+
Build ID: e2723d00b77dc1044e2ba599ba93517af34e1ea5
TinderBox: Linux-rpm_deb-x86_64@46-TDF, Branch:master, Time: 2014-09-09_23:17:41

No crash in LO 4.2.6 -> regression
Comment 2 raal 2014-09-11 17:49:19 UTC
crash reproduces also in version 4.2.6
Comment 3 Jean-Baptiste Faure 2014-09-14 16:50:45 UTC
Crash reproduced with version 4.3.3.0.0+ built at home under Ubuntu 14.04 x86-64

No crash in Version: 4.1.6.2 (Build ID: 40ff705089295be5be0aae9b15123f687c05b0a) TDF build.

Best regards. JBF
Comment 4 Eike Rathke (retired, only occasionally showing up) 2014-09-16 20:09:16 UTC
@Kohei: mdds, killed that badly that not even a backtrace is available in gdb.
Comment 5 Kohei Yoshida 2014-09-18 15:43:54 UTC
I figured this out.  The problem was pretty simple & once again on the Calc side.
Comment 6 Kohei Yoshida 2014-09-18 16:54:05 UTC
And it's very simple to reproduce this.  All you have to do is do a left-to-right sort while whole columns are selected i.e. selection extends from the very top row to the very bottom, on any data set.
Comment 7 Commit Notification 2014-09-18 17:41:10 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0ef6263ed2b31b8f9e431971e6c5e8928996c1c8

fdo#83764: Ensure that the row position is below MAXROW.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2014-09-18 17:41:36 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=337bc5665a8524eb8adfd7e90d12a8019ee6563b

fdo#83764: Write test for this.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Kohei Yoshida 2014-09-18 17:43:18 UTC
Fixed on master, and backport requests for 4.2 and 4.3 sent to gerrit.  I'm done.
Comment 10 Commit Notification 2014-09-23 14:15:55 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=086ed7e59f5ec74dfdf046c3d5b4f28ede8dd8be&h=libreoffice-4-2

fdo#83764: Ensure that the row position is below MAXROW.


It will be available in LibreOffice 4.2.7.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2014-09-25 12:30:09 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=59e7789744c99b6431461f14694b6f9ab2492a80&h=libreoffice-4-3

fdo#83764: Ensure that the row position is below MAXROW.


It will be available in LibreOffice 4.3.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 12 Doriano Cometto 2014-10-21 06:31:52 UTC
Hi,

I downloaded and installed this version

libo-43~2014-10-17_16.12.56_LibreOfficeDev_4.3.4.0.0_Win_x86.msi

and this bug is still there. Did I misunderstanding in which version it would be fixed?
Comment 13 Doriano Cometto 2014-10-21 10:49:20 UTC
Sorry my fault. It is solved in 4.3.4
Comment 14 Caolán McNamara 2015-02-12 20:52:53 UTC
*** Bug 84753 has been marked as a duplicate of this bug. ***