fdo#83764: Ensure that the row position is below MAXROW.

When attempting to split formula groups, else multi_type_vector would
try to locate a block outside its logical range.

Change-Id: I424ede112138de459b5ba3bff5e021c4407ccf3d
(cherry picked from commit 0ef6263ed2b31b8f9e431971e6c5e8928996c1c8)
Reviewed-on: https://gerrit.libreoffice.org/11519
Reviewed-by: Andras Timar <andras.timar@collabora.com>
Tested-by: Andras Timar <andras.timar@collabora.com>